added more styles

--- a/Testing/aboutme.html
+++ b/Testing/aboutme.html
@@ -30,7 +30,7 @@
         </ul>
 -->
         <h1>Why you should hire me</h1>
-        My name is Semyon Lukichev and I can <b>almost</b> speak English.
+        My name is <strong>Semyon Lukichev</strong> and I can <b>almost</b> speak English.
 <!--        <p> HTML is <em>really,</em><strong>REALLY lots of fun </strong>
         </p>
 
@@ -49,7 +49,16 @@
 
         </ul>
     <h2>My Work Experience</h2>
-        <em>Soon to be your company!</em>
+        <em>Soon to be <mark>your</mark> company!</em>
+<pre>
+a
+a
+a
+<b>A</b>
+<b>A</b>
+<b>A</b>
+<b><em>A</em></b>
+</pre>
 
 
 
