added basic button functionality

--- a/creative_project_2/cp_2.html
+++ b/creative_project_2/cp_2.html
@@ -14,7 +14,7 @@
 	   <h1>Space-Tac-Toe</h1>
   </main>
 
-  <section id="rules-view">
+  <section id="rules-view" class="view-box">
     <h2>
       How to play:
     </h2>
@@ -28,11 +28,17 @@
 
   </section>
 
-  <section id="game-view">
-    <p>Time: <span>00:00</span></p>
+  <section id="game-view" class="view-box hidden">
+
+    <p>Time: <span id="timer">00:00</span></p>
+
+    <!-- <div id="game-board">
+
+    </div> -->
+
   </section>
 
-  <section id="stats-view">
+  <section id="stats-view" class="view-box hidden">
     <p>Stat: <span>0</span></p>
     <p>Stat: <span>0</span></p>
     <p>Stat: <span>0</span></p>
